Add responsive footer styles and utility classes for padding and text size

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -522,11 +522,17 @@
   .py-3\.5 {
     padding-block: calc(var(--spacing) * 3.5);
   }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
+  }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
+  }
+  .pb-5 {
+    padding-bottom: calc(var(--spacing) * 5);
   }
   .pb-16 {
     padding-bottom: calc(var(--spacing) * 16);
@@ -716,6 +722,12 @@
       line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
+  .xs\:text-lg {
+    @media (width >= 425px) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
+  }
   .xs\:text-sm {
     @media (width >= 425px) {
       font-size: var(--text-sm);
@@ -780,6 +792,11 @@
   .sm\:py-12 {
     @media (width >= 40rem) {
       padding-block: calc(var(--spacing) * 12);
+    }
+  }
+  .sm\:pb-0 {
+    @media (width >= 40rem) {
+      padding-bottom: calc(var(--spacing) * 0);
     }
   }
   .sm\:text-left {
