--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -19,9 +19,6 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
-    --container-lg: 32rem;
-    --container-xl: 36rem;
-    --container-2xl: 42rem;
     --container-5xl: 64rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
@@ -200,6 +197,9 @@
   }
 }
 @layer utilities {
+  .\!static {
+    position: static !important;
+  }
   .absolute {
     position: absolute;
   }
@@ -208,6 +208,9 @@
   }
   .relative {
     position: relative;
+  }
+  .static {
+    position: static;
   }
   .inset-0 {
     inset: calc(var(--spacing) * 0);
@@ -224,18 +227,6 @@
   .top-4 {
     top: calc(var(--spacing) * 4);
   }
-  .top-5 {
-    top: calc(var(--spacing) * 5);
-  }
-  .top-6 {
-    top: calc(var(--spacing) * 6);
-  }
-  .top-7 {
-    top: calc(var(--spacing) * 7);
-  }
-  .top-8 {
-    top: calc(var(--spacing) * 8);
-  }
   .-right-8 {
     right: calc(var(--spacing) * -8);
   }
@@ -244,9 +235,6 @@
   }
   .right-5 {
     right: calc(var(--spacing) * 5);
-  }
-  .right-8 {
-    right: calc(var(--spacing) * 8);
   }
   .-bottom-8 {
     bottom: calc(var(--spacing) * -8);
@@ -326,13 +314,9 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .size-1 {
-    width: calc(var(--spacing) * 1);
-    height: calc(var(--spacing) * 1);
-  }
-  .size-1\/2 {
-    width: calc(1/2 * 100%);
-    height: calc(1/2 * 100%);
+  .\!size-auto {
+    width: auto !important;
+    height: auto !important;
   }
   .size-6 {
     width: calc(var(--spacing) * 6);
@@ -350,10 +334,6 @@
     width: calc(var(--spacing) * 9);
     height: calc(var(--spacing) * 9);
   }
-  .size-11 {
-    width: calc(var(--spacing) * 11);
-    height: calc(var(--spacing) * 11);
-  }
   .size-12 {
     width: calc(var(--spacing) * 12);
     height: calc(var(--spacing) * 12);
@@ -362,11 +342,23 @@
     width: 100%;
     height: 100%;
   }
+  .\!h-14 {
+    height: calc(var(--spacing) * 14) !important;
+  }
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
+  .h-60 {
+    height: calc(var(--spacing) * 60);
+  }
+  .h-72 {
+    height: calc(var(--spacing) * 72);
+  }
   .h-80 {
     height: calc(var(--spacing) * 80);
+  }
+  .h-96 {
+    height: calc(var(--spacing) * 96);
   }
   .h-\[60px\] {
     height: 60px;
@@ -395,9 +387,6 @@
   .\!max-w-5xl {
     max-width: var(--container-5xl) !important;
   }
-  .max-w-2xl {
-    max-width: var(--container-2xl);
-  }
   .max-w-64 {
     max-width: calc(var(--spacing) * 64);
   }
@@ -407,14 +396,8 @@
   .max-w-96 {
     max-width: calc(var(--spacing) * 96);
   }
-  .max-w-lg {
-    max-width: var(--container-lg);
-  }
   .max-w-md {
     max-width: var(--container-md);
-  }
-  .max-w-xl {
-    max-width: var(--container-xl);
   }
   .flex-shrink {
     flex-shrink: 1;
@@ -424,6 +407,9 @@
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .rotate-180 {
+    rotate: 180deg;
   }
   .resize {
     resize: both;
@@ -562,6 +548,9 @@
   .p-3\.5 {
     padding: calc(var(--spacing) * 3.5);
   }
+  .\!px-3\.5 {
+    padding-inline: calc(var(--spacing) * 3.5) !important;
+  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
@@ -574,11 +563,8 @@
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
   }
-  .px-20 {
-    padding-inline: calc(var(--spacing) * 20);
-  }
-  .px-28 {
-    padding-inline: calc(var(--spacing) * 28);
+  .\!py-3 {
+    padding-block: calc(var(--spacing) * 3) !important;
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -608,10 +594,6 @@
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
-  }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
@@ -630,9 +612,6 @@
   }
   .text-\[17px\] {
     font-size: 17px;
-  }
-  .text-\[21px\] {
-    font-size: 21px;
   }
   .text-\[22px\] {
     font-size: 22px;
@@ -715,6 +694,13 @@
       }
     }
   }
+  .after\:\!content-\[\'\'\] {
+    &::after {
+      content: var(--tw-content);
+      --tw-content: '' !important;
+      content: var(--tw-content) !important;
+    }
+  }
   .hover\:bg-black {
     &:hover {
       @media (hover: hover) {
@@ -758,6 +744,11 @@
   .xs\:h-11\/12 {
     @media (width >= 425px) {
       height: calc(11/12 * 100%);
+    }
+  }
+  .xs\:h-80 {
+    @media (width >= 425px) {
+      height: calc(var(--spacing) * 80);
     }
   }
   .xs\:h-full {
@@ -840,21 +831,14 @@
       display: none;
     }
   }
-  .sm\:size-8 {
-    @media (width >= 40rem) {
-      width: calc(var(--spacing) * 8);
-      height: calc(var(--spacing) * 8);
-    }
-  }
-  .sm\:size-12 {
-    @media (width >= 40rem) {
-      width: calc(var(--spacing) * 12);
-      height: calc(var(--spacing) * 12);
-    }
-  }
   .sm\:h-24 {
     @media (width >= 40rem) {
       height: calc(var(--spacing) * 24);
+    }
+  }
+  .sm\:h-96 {
+    @media (width >= 40rem) {
+      height: calc(var(--spacing) * 96);
     }
   }
   .sm\:h-auto {
@@ -966,6 +950,11 @@
       height: calc(var(--spacing) * 36);
     }
   }
+  .md\:h-\[456px\] {
+    @media (width >= 48rem) {
+      height: 456px;
+    }
+  }
   .md\:h-full {
     @media (width >= 48rem) {
       height: 100%;
@@ -1056,14 +1045,6 @@
       line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
-  .sm\:md\:text-3xl {
-    @media (width >= 40rem) {
-      @media (width >= 48rem) {
-        font-size: var(--text-3xl);
-        line-height: var(--tw-leading, var(--text-3xl--line-height));
-      }
-    }
-  }
   .lg\:mx-0 {
     @media (width >= 64rem) {
       margin-inline: calc(var(--spacing) * 0);
@@ -1101,6 +1082,11 @@
   .lg\:h-40 {
     @media (width >= 64rem) {
       height: calc(var(--spacing) * 40);
+    }
+  }
+  .lg\:h-\[512px\] {
+    @media (width >= 64rem) {
+      height: 512px;
     }
   }
   .lg\:max-h-max {
@@ -1175,12 +1161,6 @@
   .lg\:text-center {
     @media (width >= 64rem) {
       text-align: center;
-    }
-  }
-  .lg\:text-3xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-3xl);
-      line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
   .lg\:text-4xl {
@@ -1420,6 +1400,11 @@
   inherits: false;
   initial-value: 0;
 }
+@property --tw-content {
+  syntax: "*";
+  initial-value: "";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -1445,6 +1430,7 @@
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
+      --tw-content: "";
     }
   }
 }
